# ACM

./: B.cpp  CMakeLists.txt  aaa.cpp  helloworld.cpp  make_data.cpp  model_output.txt  test.in
Newcode/河南萌新联赛2025第（六）场/: A.cpp
PTA/: 1.cpp
c++/: helloworld.cpp  板子.cpp
c++/ICPC/2024nanjing/: B.cpp  E.cpp  J.cpp
c++/XCPC/2025“钉耙编程”中国大学生算法设计暑期联赛（2）/: 1002.cpp  1008.cpp
c++/XCPC/2025“钉耙编程”中国大学生算法设计暑期联赛（5）/: 1009.cpp
c++/XCPC/FJCPC/: B.cpp  G.cpp  J.cpp
c++/XCPC/HDU/: 1005.cpp
c++/XCPC/JNCPC/: A.cpp  F.cpp  G.cpp  J.cpp  bridge.py  checker.py
c++/XCPC/SCCPC/: B.cpp  E.cpp  H.cpp  L.cpp
c++/XCPC/马蹄2/: A.cpp  MC0559 韩魏倒戈灭智伯.cpp  MC0564 漆身吞炭更变声.cpp  MC0565 豫让伏桥修暗器.cpp  MC0566 三刺衣袍绝命义.cpp  gmon.out
c++/atc/AtCoder Beginner Contest 412/: A.cpp  B.CPP  C.CPP  D.CPP  E.CPP
c++/atc/AtCoder Beginner Contest 413/: A.cpp  B.cpp  C.cpp  D.cpp  G.cpp
c++/atc/AtCoder Beginner Contest 414/: A.cpp  B.cpp  C.cpp
c++/atc/AtCoder Beginner Contest 415/: A.cpp  B.cpp  C.cpp  D.cpp  F.cpp
c++/atc/AtCoder Beginner Contest 416/: A.cpp  B.cpp  C.cpp  D.cpp
c++/atc/AtCoder Beginner Contest 417/: A.cpp  B.cpp  C.cpp  F.cpp
c++/atc/AtCoder Beginner Contest 418/: A.cpp  B.cpp  C.cpp  E.cpp
c++/atc/AtCoder Beginner Contest 419/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
c++/atc/AtCoder Beginner Contest 420/: A.cpp  B.cpp  (+4 more)
c++/寒假/: P1996 约瑟夫问题.cpp
c++/瞎几把的玩意/: 未命名1.cpp
c++/算法/: P1090 [NOIP 2004 提高组] 合并果子.cpp  P1908 逆序对.cpp
c++/计算几何/: Counter-Clockwise.cpp  Intersection.cpp  Orthogonal.cpp  Projection .cpp  Reflection.cpp
trustie/: 【1.2.3 Game of Flying Circus】.cpp
(+380 files in other folders)
